// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznLPX ccrbYx"
>
  <li
    className="sc-fzoaKM gydfRE"
    onClick={[Function]}
  >
    <span
      className="sc-fzoKki htQkIW"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoaKM gydfRE"
    onClick={[Function]}
  >
    <span
      className="sc-fzoKki htQkIW"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoaKM gydfRE"
    onClick={[Function]}
  >
    <span
      className="sc-fzoKki htQkIW"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznLPX ccrbYx"
>
  <li
    className="sc-fzoaKM cvCvwg"
    onClick={[Function]}
  >
    <span
      className="sc-fzoKki htQkIW"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoaKM cvCvwg"
    onClick={[Function]}
  >
    <span
      className="sc-fzoKki htQkIW"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoaKM cvCvwg"
    onClick={[Function]}
  >
    <span
      className="sc-fzoKki htQkIW"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
